Correction alignement icones et taille champs formulaire

--- a/assets/scss/admin_activity/form.scss
+++ b/assets/scss/admin_activity/form.scss
@@ -4,8 +4,8 @@
     width: 25%;
 }
 
-.admin-activity-form #admin_activity_hours,
-.admin-activity-form #admin_activity_minutes, {
+.admin-activity-form #admin_activity_hour,
+.admin-activity-form #admin_activity_minute, {
     width: 8%;
 }
 
